# dro-bot

bot/agent/: agent.py  tools.py
bot/rag/: README.md  interactive.py  main.py  pyproject.toml
bot/rag/src/: pipeline.py  query.py
bot/rag/tests/: check_models.py  create_test_data.py  test_data.xlsx
